--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -34,11 +34,7 @@
           <ul class="Beau_Navigation__Menu">
               <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/services" class="Beau_Navigation__Menu_Link">Services</a></li>
               <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/talks" class="Beau_Navigation__Menu_Link">Talks</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/blogs" class="Beau_Navigation__Menu_Link">Blogs</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/books" class="Beau_Navigation__Menu_Link">Books</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/podcasts" class="Beau_Navigation__Menu_Link">Podcasts</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/screencasts" class="Beau_Navigation__Menu_Link">Screencasts</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/services" class="Beau_Navigation__Menu_Link"><strong>Hire Me</strong></a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/hire-me" class="Beau_Navigation__Menu_Link"><strong>Hire Me</strong></a></li>
           </ul>
       </div>
   </nav>
