--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -34,7 +34,7 @@
           <ul class="Beau_Navigation__Menu">
               <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/services" class="Beau_Navigation__Menu_Link">Services</a></li>
               <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/talks" class="Beau_Navigation__Menu_Link">Talks</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/hire-me" class="Beau_Navigation__Menu_Link"><strong>Hire Me</strong></a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/hire-me?utm_source=website&utm_medium=header-link&utm_campaign=srcmvn.com" class="Beau_Navigation__Menu_Link"><strong>Hire Me</strong></a></li>
           </ul>
       </div>
   </nav>
